--- a/public/bookShop-usersHome.html
+++ b/public/bookShop-usersHome.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./bookShop.css">
-    <title>Book-Shop</title>
+    <title>User Bookshop</title>
 </head>
 <body>
     <div class="container">
@@ -19,11 +19,11 @@
 				</h1>
 			</div>
             <div class="upperCenter">
-                <a href="./bookShop-login&join.html" target="_blank" class="LoginOrJoin block" id="LoginOrJoin">Log In/Join</a>
-                <a href="./bookShop-home.html" class="logout none" id="logout">Log Out</a>
+                <a href="./bookShop-login&join.html" target="_blank" class="LoginOrJoin none" id="LoginOrJoin">Log In/Join</a>
+                <a href="/" class="logout block" id="logout">Log Out</a>
             </div>
             <div class="upperRight">
-                <a href="./bookShop-cart.html" class="none myCartUrl">My Cart</a>
+                <a href="./bookShop-cart.html" class="block myCartUrl">My Cart</a>
             </div>
         </div>
         <div class="mainPage" id="mainPage">
@@ -45,6 +45,6 @@
             all credit to Itamar Hagai
         </div>
     </div>
-    <script src="./bookShop-home.js"></script>
+    <script src="./bookShop-usersHome.js"></script>
 </body>
 </html>
