--- a/public/bookShop-login&join.html
+++ b/public/bookShop-login&join.html
@@ -11,15 +11,31 @@
 <body>
     <div class="container">
         <div class="upperBar">
-
+            <div class="upperLeft">
+                <h1>
+                    <a href="">
+                        <img src="https://d3ogvdx946i4sr.cloudfront.net/assets/v2.19.35/img/logo.svg" alt="Bookdepository.com">
+                    </a>
+				</h1>
+			</div>
+            <div class="upperCenter">
+                <a href="./bookShop-login&join.html" target="_blank" class="LoginOrJoin block" id="LoginOrJoin">Log In/Join</a>
+                <a href="./bookShop-home.html" class="logout none" id="logout">Log Out</a>
+            </div>
+            <div class="upperRight">
+                <a href="./bookShop-cart.html" class="none myCartUrl">My Cart</a>
+            </div>
+            
         </div>
+        
         <div class="mainBox">
             <div class="sign-in-container">
                 <h3>Sign in</h3>
                 <form class="signInForm" id="signInForm">
                     <input type="email" id="signin-email-text" placeholder="Email"/>
                     <input type="password" id="signin-password-text" placeholder="Password"/>
-                    <div class="none error"></div>
+                    <div class="none errorLogin">Unable to log-in</div>
+                    <div class="none successLogIn">Welcome Back </div>
                     <button>Sign In</button>
                 </form>
             </div>
@@ -27,15 +43,16 @@
                 <h3>Join</h3>
                 <form class="joinForm" id="joinForm">
                     <input type="text" id="join-name-text" placeholder="Name"/>
-                    <input type="number" id="join-age-text" placeholder="Age"/>
+                    <input type="number" id="join-age-text" placeholder="   Age"/>
                     <input type="email" id="join-email-text"placeholder="Email"/>
                     <input type="password" id="join-password-text" placeholder="Password"/>
-                    <div class="none error"></div>
+                    <div class="none errorJoin">Try again...</div>
+                    <div class="none successJoin">Welcome, </div>
                     <button>Sign Up</button>
                 </form>
             </div>
         </div>
     </div>
-    <script src="./bookShop.js"></script>
+    <script src="./bookshop-login.js"></script>
 </body>
 </html>
