--- a/public/bookShop-home.html
+++ b/public/bookShop-home.html
@@ -13,24 +13,23 @@
         <div class="upperBar">
             <div class="upperLeft">
                 <h1>
-                    <a href="">
+                    <a href="./bookShop-home.html">
                         <img src="https://d3ogvdx946i4sr.cloudfront.net/assets/v2.19.35/img/logo.svg" alt="Bookdepository.com">
                     </a>
 				</h1>
 			</div>
             <div class="upperCenter">
                 <a href="./bookShop-login&join.html" target="_blank" class="LoginOrJoin block" id="LoginOrJoin">Log In/Join</a>
-                <a href="./bookShop-home.html" class="logout none" id="logout">Log Out</a>
+                <a class="logout none" id="logout">Log Out</a>
             </div>
             <div class="upperRight">
-                <a href="./bookShop-cart.html" class="none myCartUrl">My Cart</a>
+                <a href="./bookShop-cart.html" class="none myCartUrl" id="myCartUrl">My Cart</a>
             </div>
         </div>
         <div class="mainPage" id="mainPage">
            
         </div>
         <div class="searchBar">
-            <h2>Search books</h2>
             <form id="searchForm" class="searchForm">
                 <label>Book Title</label>
                 <input type="text" id="searchTitleText" placeholder="book's title"/>
