--- a/public/bookShop-login&join.html
+++ b/public/bookShop-login&join.html
@@ -13,7 +13,7 @@
         <div class="upperBar">
             <div class="upperLeft">
                 <h1>
-                    <a href="">
+                    <a href="./bookShop-home.html">
                         <img src="https://d3ogvdx946i4sr.cloudfront.net/assets/v2.19.35/img/logo.svg" alt="Bookdepository.com">
                     </a>
 				</h1>
