done before Aryie adjustments

--- a/public/bookShop-cart.html
+++ b/public/bookShop-cart.html
@@ -23,7 +23,7 @@
             </blockquote>
             <div class="upperRight upperRight-phone">
                 <a href="./bookShop-login&join.html" class="LoginOrJoin none" id="LoginOrJoin">Log In/Join</a>
-                <a href="./bookShop-home.html" class="logout block" id="logout">Log Out</a>
+                <a href="./bookShop-home.html" class="logout block" id="logout">Home</a>
                 <a href="./bookShop-cart.html" target="_blank" class="none myCartUrl" id="myCartUrl">My Cart</a>
             </div>
         </div>
@@ -50,7 +50,7 @@
                     </div>
                 </div>  
             
-                <div class="cart-totalPrice" id="cart-totalPrice">
+                <div class="cart-totalPrice cart-totalPrice-phone" id="cart-totalPrice">
 
                 </div>
                 <div class="cart-payButton button" id="cart-payButton">Buy</div>
