--- a/public/bookShop-login&join.html
+++ b/public/bookShop-login&join.html
@@ -11,7 +11,7 @@
 <body class="phone comp">
     <div class="container">
         <div class="upperBar">
-            <div class="upperLeft">
+            <div class="upperLeft upperLeftLogin">
                 <h1>
                     <a href="./bookShop-home.html">
                         <img src="https://d3ogvdx946i4sr.cloudfront.net/assets/v2.19.35/img/logo.svg" alt="Bookdepository.com">
@@ -22,7 +22,7 @@
                " Take A Good Book To Bad With You - Books Do Not Snore. "
             </blockquote>
             <div class="upperRight">
-                <a href="./bookShop-login&join.html" class="LoginOrJoin block" id="LoginOrJoin">Log In/Join</a>
+                <a href="./bookShop-login&join.html" class="LoginOrJoin none" id="LoginOrJoin">Log In/Join</a>
                 <a href="./bookShop-home.html" class="logout none" id="logout">Log Out</a>
                 <a href="./bookShop-cart.html" target="_blank" class="none myCartUrl" id="myCartUrl">My Cart</a>
             </div>
